@startuml Personal Website Class Diagram

skinparam classAttributeIconSize 0
skinparam classFontStyle bold
skinparam classAttributeFontStyle normal

class Gallery {
    - currentPage: number
    - imagesPerPage: number
    - searchQuery: string
    - modal: Modal
    - imageContainer: HTMLElement
    - searchInput: HTMLElement
    - loadMoreButton: HTMLElement
    + init(): void
    + loadImages(page: number): Promise<void>
    + renderImages(images: Array): void
    + handleImageClick(image: Object): void
    + handleSearch(query: string): void
    + updatePagination(): void
    + showLoadingState(): void
    + hideLoadingState(): void
}

class Modal {
    - modal: HTMLElement
    - modalImage: HTMLElement
    - modalCaption: HTMLElement
    - closeButton: HTMLElement
    - isOpen: boolean
    + init(): void
    + show(imageUrl: string, caption: string): void
    + hide(): void
    + handleKeyPress(event: KeyboardEvent): void
    + updateContent(imageUrl: string, caption: string): void
    - addEventListeners(): void
}

class GalleryRoutes {
    - router: Express.Router
    - db: Database
    + getImages(req: Request, res: Response): Promise<void>
    + searchImages(req: Request, res: Response): Promise<void>
    + finderSearch(req: Request, res: Response): Promise<void>
    - handleError(error: Error, res: Response): void
    - validateSearchParams(params: Object): boolean
    - formatImageResponse(images: Array): Array
}

class ImageProcessor {
    - supportedFormats: Array<string>
    + processImage(file: File): Promise<ProcessedImage>
    + resizeImage(image: Image, dimensions: Object): Promise<Image>
    + optimizeImage(image: Image): Promise<Image>
    + validateFormat(format: string): boolean
}

Gallery --> Modal : uses
Gallery ..> GalleryRoutes : calls API
GalleryRoutes --> ImageProcessor : uses
Modal ..> Gallery : notifies

note right of Gallery
  Handles frontend image gallery
  display and interactions
end note

note right of Modal
  Manages image modal/lightbox
  functionality
end note

note right of GalleryRoutes
  Handles backend API routes
  for image operations
end note

@enduml
